<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>190</width>
    <height>291</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>增加医生</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-image: url(:/back.jpg);</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="1" column="0" alignment="Qt::AlignLeft">
    <widget class="QLabel" name="label_2">
     <property name="text">
      <string>新增医生姓名：</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLineEdit" name="nameLine"/>
   </item>
   <item row="4" column="0">
    <widget class="QComboBox" name="sexBox"/>
   </item>
   <item row="5" column="0" alignment="Qt::AlignLeft">
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>新增医生所属科室：</string>
     </property>
    </widget>
   </item>
   <item row="7" column="0">
    <widget class="QComboBox" name="DepartBox"/>
   </item>
   <item row="8" column="0" alignment="Qt::AlignHCenter">
    <widget class="QPushButton" name="pushButton">
     <property name="text">
      <string>确定</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0" alignment="Qt::AlignLeft">
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>新增医生性别：</string>
     </property>
    </widget>
   </item>
   <item row="0" column="0" alignment="Qt::AlignHCenter">
    <widget class="QLabel" name="label">
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>16</pointsize>
      </font>
     </property>
     <property name="text">
      <string>增加医生</string>
     </property>
    </widget>
   </item>
   <item row="9" column="0" alignment="Qt::AlignHCenter">
    <widget class="QPushButton" name="returnButton">
     <property name="text">
      <string>返回</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="background_image.qrc"/>
 </resources>
 <connections/>
</ui>
