<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>337</width>
    <height>465</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>科室设置</string>
  </property>
  <property name="styleSheet">
   <string notr="true">background-image: url(:/back.jpg);</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" alignment="Qt::AlignHCenter">
    <widget class="QLabel" name="label">
     <property name="font">
      <font>
       <family>微软雅黑</family>
       <pointsize>16</pointsize>
      </font>
     </property>
     <property name="text">
      <string>科室设置</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0" alignment="Qt::AlignHCenter">
    <widget class="QPushButton" name="addDepart">
     <property name="text">
      <string>增加科室</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QTableWidget" name="tableWidget">
     <property name="contextMenuPolicy">
      <enum>Qt::DefaultContextMenu</enum>
     </property>
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <column>
      <property name="text">
       <string>科室编号</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>科室名称</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>其他</string>
      </property>
     </column>
    </widget>
   </item>
   <item row="4" column="0" alignment="Qt::AlignHCenter">
    <widget class="QPushButton" name="deletDepart">
     <property name="text">
      <string>删除选中科室</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0" alignment="Qt::AlignHCenter">
    <widget class="QPushButton" name="returnButton">
     <property name="text">
      <string>返回</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="background_image.qrc"/>
 </resources>
 <connections/>
</ui>
